package ch06_01;

/**
 * program: java-learn->BigTrouser
 * description:
 * author: gerry
 * created: 2020-03-17 21:32
 **/
public class BigTrouser extends Finery {
    @Override
    public void show() {
        System.out.println("垮裤 ");
        super.show();
    }
}
