package ch06_01;

/**
 * program: java-learn->TShirts
 * description:
 * author: gerry
 * created: 2020-03-17 21:31
 **/
public class PoQiuXie extends Finery {
    @Override
    public void show() {
        System.out.println("破球鞋 ");
        super.show();
    }
}
