package ch06_01;

/**
 * program: java-learn->TShirts
 * description:
 * author: gerry
 * created: 2020-03-17 21:31
 **/
public class TShirts extends Finery {
    @Override
    public void show() {
        System.out.println("大T恤 ");
        super.show();
    }
}
